# rc-deflate

./: Cargo.toml  README.md
resources/test-gzips/: hello.txt
src/: deflate.rs  error.rs  gzip.rs  lib.rs  parse.rs
