[package]
name = "rc-deflate"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.0"
bitvec = "0.14.0"
hex_fmt = "0.3.0"
left-pad = "1.0.1"
tabular = "0.1.2"
